--- a/k8s/nginx-config.yaml
+++ b/k8s/nginx-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-config
-  namespace: pixel-positions
+  namespace: tomemming
 data:
   nginx.conf: |
     user  nginx;
