--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pixel-positions-service
-  namespace: pixel-positions
+  namespace: tomemming
 spec:
   selector:
     app: pixel-positions
